name:                Jibimba
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  build-depends:       base
                     , miso
                     , random
                     , random-shuffle
                     , MonadRandom
  default-language:    Haskell2010
