name:                Jibimba
version:             0.1.0.0
synopsis:            Web based game based on wordplay
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base
                     , containers
                     , miso
                     , random
                     , random-shuffle
                     , MonadRandom
  default-language:    Haskell2010
  other-modules:       Model
                     , Update
                     , View

                     , Nouns
                     , CommonSyns
                     , FpnAttributes
                     , FsnAttributes
                     , MpnAttributes
                     , MsnAttributes
                     , MsmpAttributes
                     , NpnAttributes
                     , NsnAttributes


-- library
--   hs-source-dirs:
--       data
--   build-depends:
--       base
--   exposed-modules:
--        Nouns
--     ,  CommonSyns
--     ,  FpnAttributes
--     ,  FsnAttributes
--     ,  MpnAttributes
--     ,  MsnAttributes
--     ,  MsmpAttributes
--     ,  NpnAttributes
--     ,  NsnAttributes
--   default-language: Haskell2010
