name:                Jibimba
version:             0.1.0.0
synopsis:            Web based game based on wordplay
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  hs-source-dirs:      src
  cpp-options:         -DGHCJS_BROWSER
  ghc-options:         -dedupe
  build-depends:       base
                     , containers
                     , miso
                     , random
                     , random-shuffle
                     , ghcjs-base
                     , aeson
  default-language:    Haskell2010
  other-modules:       Model
                     , Update
                     , View
